--- a/css/variables.less
+++ b/css/variables.less
@@ -1,5 +1,6 @@
-@dark: #222222;
+@dark: #333333;
 @light: #F0F0F0;
+@green: #8BAF3D;
 
 @font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 
@@ -7,8 +8,15 @@
 @font-size-medium: (@font-size * 1.5);
 @font-size-big: (@font-size * 3);
 
-@body-bg: @light;
-@body-color: @dark;
+@body-bg: @dark;
+@body-color: @light;
 
-@header-bg: @dark;
-@header-color: @light;
+@header-bg: @light;
+@header-color: @dark;
+
+@footer-bg: @header-bg;
+@footer-color: @header-color;
+
+@border: 5px solid @green;
+
+@padding: 10px;
