--- a/css/styles.less
+++ b/css/styles.less
@@ -9,10 +9,21 @@ body {
 	color: @body-color;
 }
 
+ul, li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
 	font-weight: lighter;
 	margin: 0;
 	padding: 0;
+}
+
+a {
+	color: @green;
+	text-decoration: none;
 }
 
 h1 {
@@ -27,8 +38,31 @@ header {
 	background: @header-bg;
 	color: @header-color;
 	text-align: center;
+	border-bottom: @border;
 
 	.container {
 		.absolute-middle;
 	}
+	.logo img {
+		width: 100%;
+		max-width: 400px;
+	}
+}
+
+main {
+	padding: (@padding * 5) 0;
+
+	.container {
+		width: 90%;
+		max-width: 1024px;
+		margin: 0 auto;
+	}
+}
+
+footer {
+	text-align: center;
+	padding: @padding 0;
+	background: @footer-bg;
+	color: @footer-color;
+	border-top: @border;
 }
