--- a/css/variables.less
+++ b/css/variables.less
@@ -5,6 +5,7 @@
 @font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 
 @font-size: 16px;
+@font-size-small: (@font-size * 0.8);
 @font-size-medium: (@font-size * 1.5);
 @font-size-big: (@font-size * 3);
 
@@ -14,9 +15,15 @@
 @header-bg: @light;
 @header-color: @dark;
 
+@projects-bg: @header-bg;
+@projects-color: @header-color;
+
 @footer-bg: @header-bg;
 @footer-color: @header-color;
 
 @border: 5px solid @green;
 
+@margin: 10px;
 @padding: 10px;
+
+@border-radius: 5px;
